[package]
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>", "Fedor Logachev <not.fl3@gmail.com>", "Constantine Shablya <t3a@protonmail.com>"]
description = "glium_text fork, text drawing with glium and rusttype"
documentation = "https://docs.rs/glium_text_rusttype"
keywords = ["text", "opengl"]
license = "MIT"
name = "glium_text_rusttype"
repository = "https://github.com/not-fl3/glium_text_rusttype"
version = "0.3.5"

[dependencies]
rusttype = "0.8"

[dependencies.glium]
default-features = false
version = "*"

[dev-dependencies]
cgmath = "*"

[dev-dependencies.glium]
features = ["glutin"]
version = "*"
